most of 1.20.1 backport