@@ -9,10 +9,9 @@ import com.samsthenerd.potionicons.PotionIconsConfig.PIRenderMode;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.DrawContext;
 import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.component.DataComponentTypes;
-import net.minecraft.entity.effect.StatusEffect;
 import net.minecraft.entity.effect.StatusEffectInstance;
 import net.minecraft.item.ItemStack;
+import net.minecraft.potion.PotionUtil;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -24,19 +23,16 @@ public class PotionOverlayRenderer implements ItemOverlayRenderer {
 
     @Override
     public void render(ItemStack stack, DrawContext drawContext) {
-        var potComp = stack.get(DataComponentTypes.POTION_CONTENTS);
-        if(potComp == null) return;
-        var effects = potComp.getEffects();
+        var pot = PotionUtil.getPotion(stack);
+        var effects = pot.getEffects();
+        if(effects.isEmpty()) return;
         boolean isShift = Screen.hasShiftDown();
         var config = PotionIconsModClient.getConfig();
         PIRenderMode mode = isShift ? config.shiftMode : config.normalMode;
         if(mode == PIRenderMode.NONE) return;
         // TODO: make this cycle?
         int i = 0;
-        List<StatusEffectInstance> effectsList = new ArrayList<>();
-        for(var effect : effects) {
-            effectsList.add(effect);
-        }
+        List<StatusEffectInstance> effectsList = new ArrayList<>(effects);
         double cycleSpeed = isShift ? config.cycleSpeedShift : config.cycleSpeedNormal;
         long cycleSpeedMS = Math.round(cycleSpeed * 1000);
         long startIdx = 0;
@@ -44,7 +40,7 @@ public class PotionOverlayRenderer implements ItemOverlayRenderer {
             startIdx = (SpriteUVLens.getSysTime() / cycleSpeedMS) % effectsList.size();
         }
         for(int j = 0; j < startIdx; j++){
-            effectsList.add(effectsList.removeFirst());
+            effectsList.add(effectsList.remove(0));
         }
         for(var effect : effectsList) {
             var effectSprite = MinecraftClient.getInstance().getStatusEffectSpriteManager().getSprite(effect.getEffectType());
@@ -72,6 +68,6 @@ public class PotionOverlayRenderer implements ItemOverlayRenderer {
 
     @Override
     public boolean isActive(ItemStack stack) {
-        return stack.get(DataComponentTypes.POTION_CONTENTS) != null;
+        return !PotionUtil.getPotionEffects(stack).isEmpty();
     }
 }
